<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonZero">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <string name="buttonAdd">+</string>
    <string name="buttonSubtr">-</string>
    <string name="buttonDivid">/</string>
    <string name="buttonMultipl">*</string>
    <string name="buttonEqual">=</string>
    <string name="buttonClearAll">CE</string>
    <string name="buttonClearLast">C</string>
    <string name="buttonDot">.</string>



</resources>
