<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <TableLayout
        android:id="@+id/main_activity"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="5sp"
        android:stretchColumns="*"
        tools:context=".MainActivity"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >


            <TextView
                android:id="@+id/textViewHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="15dp"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:background="@android:color/darker_gray"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">


            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_span="4"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="50dp"

                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button3" />

            <Button
                android:id="@+id/buttonClearLast"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonClearLast" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button6" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonDot" />

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button9" />

            <Button
                android:id="@+id/buttonMultipl"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonMultipl" />


        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/buttonDivid"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonDivid" />


            <Button
                android:id="@+id/buttonZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonZero" />


            <Button
                android:id="@+id/buttonSubtr"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonSubtr" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buttonAdd" />


        </TableRow>

        <TableRow

            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/buttonClearAll"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/buttonClearAll" />


            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/buttonEqual" />
        </TableRow>
    </TableLayout>


</layout>